Adding Media Team members

--- a/view/team.html
+++ b/view/team.html
@@ -33,10 +33,11 @@
                         <li class="nav__item"><a href="#organizers" class="nav__link">Organizers</a></li>
                         <li class="nav__item"><a href="#web" class="nav__link">Web</a></li>
                         <li class="nav__item"><a href="#content" class="nav__link">Content</a></li>
-                        <li class="nav__item"><a href="#event" class="nav__link">Event Management</a></li>
+                        <li class="nav__item"><a href="#event" class="nav__link">EM</a></li>
                         <li class="nav__item"><a href="#pr" class="nav__link">PR</a></li>
                         <li class="nav__item"><a href="#hr" class="nav__link">HR</a></li>
                         <li class="nav__item"><a href="#sponsorship" class="nav__link">Sponsorship</a></li> 
+                        <li class="nav__item"><a href="#media" class="nav__link">Media</a></li> 
                         <li><i class='bx bx-toggle-left change-theme' id="theme-button"></i></li>
                     </ul>
                 </div>
@@ -895,6 +896,198 @@
                             <div class="team-title">
                                 <h5>Akanksha Singh</h5>
                                 <span>Sponsorship Team</span>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="heading-title text-center team__head">
+                            <h2 class="section-team-center" id="media">Media Team</h2>
+                            <!-- <p class="p-top-30 half-txt">Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. </p> -->
+                        </div>
+
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/Astha_Varshney - Astha Varshney.jpg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>I am the most extroverted person you are ever gonna meet. </p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/astha-varshney-132980191"><i class="fa fa-linkedin"></i></a>
+                                        <a href="https://twitter.com/AsthaVarshney2?t=W2i-utKGpzfDhew_QBQNDQ&s=09"><i class="fa fa-twitter"></i></a>
+                                        <a href="https://instagram.com/asthavarshneyy?utm_medium=copy_link"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Astha Varshney</h5>
+                                <span>Media Team</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/Drishti_Vaswani - Ria Vaswani.jpeg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>I am a walking contradiction. </p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/drishti-vaswani-ba8079229/"><i class="fa fa-linkedin"></i></a>
+                                        <a href="https://twitter.com/vaswani_drishti"><i class="fa fa-twitter"></i></a>
+                                        <a href="https://www.instagram.com/drishti_vaswani/"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Drishti Vaswani</h5>
+                                <span>Media Team</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/Tanisha_Agrawal - Tanisha Agrawal.jpg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>Always curious to learn more </p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/tanisha-agrawal-510731225/"><i class="fa fa-linkedin"></i></a>
+                                        <a href="https://twitter.com/Tanz_al"><i class="fa fa-twitter"></i></a>
+                                        <a href="https://www.instagram.com/_tanz.agl_/"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Tanisha Agrawal</h5>
+                                <span>Media Team</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/Preeti_Pal - PREETI PAL.jpg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>I am a fun-loving person with having keen interest in design & innovation and I try to work and contribute towards it.</p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/preeti-pal-1109/"><i class="fa fa-linkedin"></i></a>
+                                        <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                                        <a href="https://www.instagram.com/_pp0912/"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Preeti Pal</h5>
+                                <span>Media Team</span>
+                            </div>
+                        </div>                        
+
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/Gargi_Goel - Gargi Goel.jpg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>Just a technology geek! </p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/gargi-goel-719566229"><i class="fa fa-linkedin"></i></a>
+                                        <a href="https://twitter.com/gargi_goel9?t=DpE9LWblKIO_4yqxtrATyQ&s=09"><i class="fa fa-twitter"></i></a>
+                                        <a href="https://www.instagram.com/goelgargi_9/"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Gargi Goel</h5>
+                                <span>Media Team</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/IMG-20191211-WA0013 - Ragini _036.jpg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>Enthusiastic about learning new things and explore the tech industry.</p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/ragini-728b0519b"><i class="fa fa-linkedin"></i></a>
+                                        <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                                        <a href="https://www.instagram.com/Art_dilpaperpr/"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Ragini </h5>
+                                <span>Media Team</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/Simran_Sagar - Simran.jpg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>A digital art enthusiast and an amateur programmer with a neat taste in movies.</p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="http://www.linkedin.com/in/simran-sagar-32885b22a"><i class="fa fa-linkedin"></i></a>
+                                        <!-- <a href="https://twitter.com/Tanz_al"><i class="fa fa-twitter"></i></a> -->
+                                        <!-- <a href="https://www.instagram.com/_tanz.agl_/"><i class="fa fa-instagram"></i></a> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Simran Sagar</h5>
+                                <span>Media Team</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/radhika - Radhika Singhal.jpeg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>A coding enthusiast and a UI/UX designer who design new websites and apps.</p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/radhika-singhal-84436a1b8/"><i class="fa fa-linkedin"></i></a>
+                                        <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                                        <a href="https://www.instagram.com/_radhika.01/"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Radhika</h5>
+                                <span>Media Team</span>
                             </div>
                         </div>
 
