--- a/view/designsolve.html
+++ b/view/designsolve.html
@@ -161,17 +161,23 @@
                             <ul class="prizes_list">
 <li>3000 INR Cash Prize</li>
 <li>Gift vouchers from HoverRobotix Hoverboards India worth 10000/- INR</li>
+<li>Gift hampers from WrapCart</li>
+<li>Free 1-year subscription licenses of Axure RP Team Edition</li>
 <li>Coupons worth 3000/- INR each for courses by Mentro</li>
+<li>$100 Digital Ocean Credits</li>
 <li>Geeks for Geeks 2000/- INR Coupon on all courses</li>
 <li>$25 Coupon for Art of Problem Solving Online Classes</li>
 <li>Leading Learners Expansion Packs (valued at $100USD each)</li>
 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
 <li>$25 worth of Wolfram | One access for free</li>
+<li>80% off discount coupons from WrapCart</li>
 <li>Online Mock Interviews from Interview Buddy</li>
 <li>Full access licenses to full coding interview prep course by Interview Cake</li>
 <li>Lifetime upgrades of Taskade</li>
 <li>1-month FREE access to all Business Plan features of echo3D</li>
 <li>20% discount code for Rosenfeld</li>
+<li>Free web hosting for 6 months from Cybrancee</li>
+<li>25% off the first year of 1Password Families</li>
 <li>Internship opportunities</li>
 
                             </ul>
@@ -185,14 +191,18 @@
                             <ul class="prizes_list">
 <li>2000 INR Cash Prize</li>
 <li>Coupons worth 3000/- INR each for courses by Mentro</li>
+<li>$100 Digital Ocean Credits</li>
 <li>Geeks for Geeks 1200/- INR Coupon on all courses</li>
 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
 <li>$25 worth of Wolfram | One access for free</li>
+<li>80% off discount coupons from WrapCart</li>
 <li>Online Mock Interviews from Interview Buddy</li>
 <li>Full access licenses to full coding interview prep course by Interview Cake</li>
 <li>Lifetime upgrades of Taskade</li>
 <li>1-month FREE access to all Business Plan features of echo3D</li>
 <li>20% discount code for Rosenfeld</li>
+<li>Free web hosting for 6 months from Cybrancee</li>
+<li>25% off the first year of 1Password Families</li>
 <li>Internship opportunities</li>
 
                             </ul>
@@ -206,14 +216,18 @@
                             <ul class="prizes_list">
 <li>1000 INR Cash Prize</li>
 <li>Coupons worth 3000/- INR each for courses by Mentro</li>
+<li>$100 Digital Ocean Credits</li>
 <li>Geeks for Geeks 800/- INR Coupon on all courses</li>
 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
 <li>$25 worth of Wolfram | One access for free</li>
+<li>80% off discount coupons from WrapCart</li>
 <li>Online Mock Interviews from Interview Buddy</li>
 <li>Full access licenses to full coding interview prep course by Interview Cake</li>
 <li>Lifetime upgrades of Taskade</li>
 <li>1-month FREE access to all Business Plan features of echo3D</li>
 <li>20% discount code for Rosenfeld</li>
+<li>Free web hosting for 6 months from Cybrancee</li>
+<li>25% off the first year of 1Password Families</li>
 <li>Internship opportunities</li>
 
                             </ul>
@@ -227,25 +241,34 @@
                         <p class="button button-link">Coming Soon</p>
                     </div> -->
         
-                            <!-- <div class="decoration__data">
+                            <div class="decoration__data">
                                 <img src="../img/events/sponsor_star.png" alt="" class="decoration__img" >
-                                <h3 class="decoration__title">Sponsor Track</h3>
-                                <p class="button button-link">Coming Soon</p>
-                            </div> -->
+                                <h3 class="decoration__title">Best Design Made Using Sketch</h3>
+                                <p class="button button-link">
+                                    <ul class="prizes_list">
+                                        <li>2x Sketch Licenses valid for 1 year</li>
+                                    </ul>
+                                </p>
+                            </div>
         
                             <div class="decoration__data">
                                 <img src="../img/events/participation_certificate.png" alt="" class="decoration__img">
                                 <h3 class="decoration__title">Participation</h3>
                                 <p class="button button-link">
                                     <ul class="prizes_list">
+                                        <li>Coupons worth 1000/- INR each for courses by Mentro</li>
+                                        <li>$100 Digital Ocean Credits</li>
 <li>Geeks for Geeks 300/- INR Coupon on all courses</li>
 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
 <li>$25 worth of Wolfram | One access for free</li>
+<li>30% off discount coupons from WrapCart</li>
 <li>Interview Buddy discount vouchers</li>
 <li>Full access licenses to full coding interview prep course by Interview Cake</li>
-<li>Lifetime upgrades of Taskade</li>
+<li>5-Year free upgrades of Taskade</li>
 <li>1-month FREE access to all Business Plan features of echo3D</li>
 <li>20% discount code for Rosenfeld</li>
+<li>Free web hosting for 6 months from Cybrancee</li>
+<li>25% off the first year of 1Password Families</li>
 
                                     </ul>
                                 </p>
