--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -164,16 +164,22 @@
                             <ul class="prizes_list">
                                 <li>7000 INR Cash Prize</li>
 <li>Gift vouchers from HoverRobotix Hoverboards India worth 10000/- INR</li>
+<li>Gift hampers from WrapCart</li>
 <li>Coupons worth 3000/- INR each for courses by Mentro</li>
+<li>$250 Digital Ocean Credits</li>
+<li>Company Lifetime Package by Clerky</li>
 <li>Geeks for Geeks 2000/- INR Coupon on all courses</li>
 <li>Leading Learners Expansion Packs (valued at $100USD each)</li>
 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
 <li>$25 worth of Wolfram | One access for free</li>
+<li>80% off discount coupons from WrapCart</li>
 <li>Online Mock Interviews from Interview Buddy</li>
 <li>Full access licenses to full coding interview prep course by Interview Cake</li>
 <li>Lifetime upgrades of Taskade</li>
 <li>1-month FREE access to all Business Plan features of echo3D</li>
 <li>20% discount code for Rosenfeld</li>
+<li>Free web hosting for 6 months from Cybrancee</li>
+<li>25% off for the first year of 1Password Families</li>
 <li>The Wolfram Award</li>
 <li>Internship opportunities</li>
 
@@ -188,14 +194,18 @@
                             <ul class="prizes_list">
 <li>5000 INR Cash Prize</li>
 <li>Coupons worth 3000/- INR each for courses by Mentro</li>
+<li>$125 Digital Ocean Credits</li>
 <li>Geeks for Geeks 1200/- INR Coupon on all courses</li>
 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
 <li>$25 worth of Wolfram | One access for free</li>
+<li>80% off discount coupons from WrapCart</li>
 <li>Online Mock Interviews from Interview Buddy</li>
 <li>Full access licenses to full coding interview prep course by Interview Cake</li>
 <li>Lifetime upgrades of Taskade</li>
 <li>1-month FREE access to all Business Plan features of echo3D</li>
 <li>20% discount code for Rosenfeld</li>
+<li>Free web hosting for 6 months from Cybrancee</li>
+<li>25% off for the first year of 1Password Families</li>
 <li>The Wolfram Award</li>
 <li>Internship opportunities</li>
 
@@ -210,14 +220,18 @@
                             <ul class="prizes_list">
 <li>3000 INR Cash Prize</li>
 <li>Coupons worth 3000/- INR each for courses by Mentro</li>
+<li>$100 Digital Ocean Credits</li>
 <li>Geeks for Geeks 800/- INR Coupon on all courses</li>
 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
 <li>$25 worth of Wolfram | One access for free</li>
+<li>80% off discount coupons from WrapCart</li>
 <li>Online Mock Interviews from Interview Buddy</li>
 <li>Full access licenses to full coding interview prep course by Interview Cake</li>
 <li>Lifetime upgrades of Taskade</li>
 <li>1-month FREE access to all Business Plan features of echo3D</li>
 <li>20% discount code for Rosenfeld</li>
+<li>Free web hosting for 6 months from Cybrancee</li>
+<li>25% off for the first year of 1Password Families</li>
 <li>The Wolfram Award</li>
 <li>Internship opportunities</li>
                             </ul>
@@ -232,14 +246,18 @@
                             <ul class="prizes_list">
                                 <li>1000 INR Cash Prize</li>
                                 <li>Coupons worth 3000/- INR each for courses by Mentro</li>
+                                <li>$100 Digital Ocean Credits</li>
                                 <li>Geeks for Geeks 300/- INR Coupon on all courses</li>
                                 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
                                 <li>$25 worth of Wolfram | One access for free</li>
+                                <li>80% off discount coupons from WrapCart</li>
                                 <li>Online Mock Interviews from Interview Buddy</li>
                                 <li>Full access licenses to full coding interview prep course by Interview Cake</li>
                                 <li>Lifetime upgrades of Taskade</li>
                                 <li>1-month FREE access to all Business Plan features of echo3D</li>
                                 <li>20% discount code for Rosenfeld</li>
+                                <li>Free web hosting for 6 months from Cybrancee</li>
+                                <li>25% off the first year of 1Password Families</li>
                                 <li>The Wolfram Award</li>
                                 <li>Internship opportunities</li>                                
                             </ul>
@@ -253,14 +271,18 @@
                             <ul class="prizes_list">
                                 <li>1000 INR Cash Prize</li>
                                 <li>Coupons worth 3000/- INR each for courses by Mentro</li>
+                                <li>$100 Digital Ocean Credits</li>
                                 <li>Geeks for Geeks 300/- INR Coupon on all courses</li>
                                 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
                                 <li>$25 worth of Wolfram | One access for free</li>
+                                <li>80% off discount coupons from WrapCart</li>
                                 <li>Online Mock Interviews from Interview Buddy</li>
                                 <li>Full access licenses to full coding interview prep course by Interview Cake</li>
                                 <li>Lifetime upgrades of Taskade</li>
                                 <li>1-month FREE access to all Business Plan features of echo3D</li>
                                 <li>20% discount code for Rosenfeld</li>
+                                <li>Free web hosting for 6 months from Cybrancee</li>
+                                <li>25% off the first year of 1Password Families</li>
                                 <li>The Wolfram Award</li>
                                 <li>Internship opportunities</li>                                
                             </ul>
@@ -274,14 +296,18 @@
                             <ul class="prizes_list">
                                 <li>1000 INR Cash Prize</li>
                                 <li>Coupons worth 3000/- INR each for courses by Mentro</li>
+                                <li>$100 Digital Ocean Credits</li>
                                 <li>Geeks for Geeks 300/- INR Coupon on all courses</li>
                                 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
                                 <li>$25 worth of Wolfram | One access for free</li>
+                                <li>80% off discount coupons from WrapCart</li>
                                 <li>Online Mock Interviews from Interview Buddy</li>
                                 <li>Full access licenses to full coding interview prep course by Interview Cake</li>
                                 <li>Lifetime upgrades of Taskade</li>
                                 <li>1-month FREE access to all Business Plan features of echo3D</li>
                                 <li>20% discount code for Rosenfeld</li>
+                                <li>Free web hosting for 6 months from Cybrancee</li>
+                                <li>25% off the first year of 1Password Families</li>
                                 <li>The Wolfram Award</li>
                                 <li>Internship opportunities</li>                                
                             </ul>
@@ -337,14 +363,19 @@
                                 <h3 class="decoration__title">Participation</h3>
                                 <p class="button button-link">
                                     <ul class="prizes_list">
+                                        <li>Coupons worth 1000/- INR each for courses by Mentro</li>
+                                        <li>$100 Digital Ocean Credits</li>
 <li>Geeks for Geeks 300/- INR Coupon on all courses</li>
 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
 <li>$25 worth of Wolfram | One access for free</li>
+<li>30% off discount coupons from WrapCart</li>
 <li>Interview Buddy discount vouchers</li>
 <li>Full access licenses to full coding interview prep course by Interview Cake</li>
-<li>Lifetime upgrades of Taskade</li>
+<li>5-Year free upgrades of Taskade</li>
 <li>1-month FREE access to all Business Plan features of echo3D</li>
 <li>20% discount code for Rosenfeld</li>
+<li>Free web hosting for 2 months from Cybrancee</li>
+<li>25% off the first year of 1Password Families</li>
 
                                     </ul>
                                 </p>
