Added Postman sponsor and prizes

--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -380,6 +380,16 @@
                                     </ul>
                                 </p>
                             </div>
+
+                            <div class="decoration__data">
+                                <img src="../img/events/sponsor_star.png" alt="" class="decoration__img">
+                                <h3 class="decoration__title">Best Hack built using APIs</h3>
+                                <p class="button button-link">
+                                    <ul class="prizes_list">
+        <li>Swag kits by Postman</li>
+                                    </ul>
+                                </p>
+                            </div>
                     
                     
                         </div>
