--- a/view/schedule.html
+++ b/view/schedule.html
@@ -179,7 +179,7 @@
               <div>
                   <h1 style="color:#34a853">Hack 'n' Solve Begins</h1>
                   <p>00:00 AM onwards</p>
-                  <p>12th March 2021/p>
+                  <p>12th March 2021</p>
               </div>
           </li>
           <li>
@@ -195,21 +195,21 @@
             <div>
                 <h1 style="color:#34a853">Hack 'n' Solve - Final Submission</h1>
                 <p>12:00 PM</p>
-                <p>13th March 2021/p>
+                <p>13th March 2021</p>
             </div>
         </li>
         <li>
             <div>
                 <h1 style="color:#34a853">Hack 'n' Solve - Pitch Round (All Teams)</h1>
                 <p>12:30 PM - 02:30 PM</p>
-                <p>13th March 2021/p>
+                <p>13th March 2021</p>
             </div>
         </li>
         <li>
             <div>
                 <h1 style="color:#34a853">Hack 'n' Solve - Pitch Round (Top 10 Teams)</h1>
                 <p>04:00 PM - 06:30 PM</p>
-                <p>13th March 2021/p>
+                <p>13th March 2021</p>
             </div>
         </li>
         <li>
