--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -390,8 +390,27 @@
                                     </ul>
                                 </p>
                             </div>
+                            
+                            <div class="decoration__data">
+                                <img src="../img/events/sponsor_star.png" alt="" class="decoration__img">
+                                <h3 class="decoration__title">Best Hack Built With AlanAI Integration</h3>
+                                <p class="button button-link">
+                                    <ul class="prizes_list">
+        <li>5000/- INR to the best project with Alan AI integrated</li>
+                                    </ul>
+                                </p>
+                            </div>
                     
-                    
+                            <div class="decoration__data">
+                                <img src="../img/events/sponsor_star.png" alt="" class="decoration__img">
+                                <h3 class="decoration__title">Best Hack built with integration of Cudos - a high-performance Blockchain platform</h3>
+                                <p class="button button-link">
+                                    <ul class="prizes_list">
+        <li>7000/- INR to the first winner</li>
+        <li>5000/- INR to the second winner</li>
+                                    </ul>
+                                </p>
+                            </div>
                         </div>
                 </section>
 
