--- a/view/ideatesolve.html
+++ b/view/ideatesolve.html
@@ -179,6 +179,7 @@
 <li>Online Mock Interviews from Interview Buddy</li>
 <li>Full access licenses to full coding interview prep course by Interview Cake</li>
 <li>Lifetime upgrades of Taskade</li>
+<li>3-month premium access to Fueler</li>
 <li>1-month FREE access to all Business Plan features of echo3D</li> 
 <li>20% discount code for Rosenfeld</li>
 <li>Free web hosting for 6 months from Cybrancee</li>
