--- a/view/schedule.html
+++ b/view/schedule.html
@@ -67,35 +67,35 @@
             <div>
               <h1 style="color:#ea4335">Design 'n' Solve - Mentorship Round 1</h1>
               <p>04:00 PM to 07:00 PM</p>
-              <p>02nd March 2021</p>
+              <p>02nd March 2022</p>
             </div>
           </li>
           <li>
             <div>
               <h1 style="color:#4285f4">Ideate 'n' Solve - Round 1 Submission</h1>
               <p>05:00 PM onwards</p>
-              <p>02nd March 2021</p>
+              <p>02nd March 2022</p>
             </div>
           </li>
           <li>
             <div>
                 <h1 style="color:#ea4335">Design 'n' Solve - Mini Event 1</h1>
                 <p>00:00 AM - 11:59 PM</p>
-                <p>03rd March 2021</p>
+                <p>03rd March 2022</p>
             </div>
           </li>
           <li>
             <div>
                 <h1 style="color:#ea4335">Design 'n' Solve - Mini Event 2</h1>
                 <p>00:00 AM - 11:59 PM</p>
-                <p>04th March 2021</p>
+                <p>04th March 2022</p>
             </div>
           </li>
           <li>
             <div>
                 <h1 style="color:#4285f4">Ideate 'n' Solve - Top 10 Teams Announcement</h1>
                 <p>12:00 PM</p>
-                <p>05th March 2021</p>
+                <p>05th March 2022</p>
             </div>
           </li>
           <li>
@@ -103,7 +103,7 @@
               <h1 style="color:#fbbc04">Workshop - Building Beautiful User Friendly Products</h1>
               <p>By Vaishnavi Dwivedi</p>
               <p>06:00 PM - 07:00 PM</p>
-              <p>05th March 2021</p>
+              <p>05th March 2022</p>
               <a href="https://dare2compete.com/workshop/building-beautiful-user-friendly-products-devcation-indira-gandhi-delhi-technical-university-for-women-igdtuw-d-266880">Register Here</a>
             </div>
           </li>
@@ -111,14 +111,14 @@
             <div>
                 <h1 style="color:#ea4335">Design 'n' Solve - Final Submission</h1>
                 <p>11:59 PM</p>
-                <p>05th March 2021</p>
+                <p>05th March 2022</p>
             </div>
           </li>
           <li>
             <div>
                 <h1 style="color:#4285f4">Ideate 'n' Solve - Live Presentation</h1>
                 <p>04:00 PM - 06:30 PM</p>
-                <p>06th March 2021</p>
+                <p>06th March 2022</p>
             </div>
           </li>
           <li>
@@ -126,7 +126,7 @@
               <h1 style="color:#fbbc04">Workshop - Ideating A Winning Solution</h1>
               <p>By Tammana Khaitan, Harshita Rathee, Bhavika Sachedva, Nandini Agarwal</p>
               <p>07:00 PM - 08:00 PM</p>
-              <p>06th March 2021</p>
+              <p>06th March 2022</p>
               <a href="https://dare2compete.com/workshop/ideating-a-winning-solution-devcation-indira-gandhi-delhi-technical-university-for-women-igdtuw-delhi-267215">Register Here</a>
             </div>
           </li>
@@ -135,7 +135,7 @@
               <h1 style="color:#fbbc04">Workshop - How To Ace Your Hackathon Pitch</h1>
               <p>By Khalid</p>
               <p>06:30 PM - 07:30 PM</p>
-              <p>07th March 2021</p>
+              <p>07th March 2022</p>
               <a href="https://dare2compete.com/workshop/how-to-ace-your-hackathon-pitch-devcation-indira-gandhi-delhi-technical-university-for-women-igdtuw-delhi-267982">Register Here</a>
             </div>
           </li>
@@ -144,7 +144,7 @@
               <h1 style="color:#fbbc04">Workshop - How To Ace Dev Hackathons</h1>
               <p>By Kunika Malhotra</p>
               <p>07:00 PM - 08:00 PM</p>
-              <p>08th March 2021</p>
+              <p>08th March 2022</p>
               <a href="https://dare2compete.com/workshop/how-to-ace-dev-hackathons-devcation-indira-gandhi-delhi-technical-university-for-women-igdtuw-delhi-268302">Register Here</a>
             </div>
           </li>
@@ -153,7 +153,7 @@
               <h1 style="color:#fbbc04">Workshop - How To Create A Search Application Using Amazon OpenSearch Service, Lamba & API Gateway</h1>
               <p>By Avinash Koshal</p>
               <p>07:00 PM - 08:00 PM</p>
-              <p>09th March 2021</p>
+              <p>09th March 2022</p>
               <a href="https://dare2compete.com/workshop/how-to-create-a-search-application-using-amazon-opensearch-service-lambda-and-api-gateway-devcation-indira-gand-268173">Register Here</a>
             </div>
           </li>
@@ -162,7 +162,7 @@
               <h1 style="color:#fbbc04">Workshop - Adding In-App AI Voice Assistant To Your Apps</h1>
               <p>By Divyansh Chaurasia</p>
               <p>07:00 PM - 08:00 PM</p>
-              <p>10th March 2021</p>
+              <p>10th March 2022</p>
               <a href="https://dare2compete.com/workshop/adding-in-app-ai-voice-assistant-to-your-apps-devcation-indira-gandhi-delhi-technical-university-for-women-igdt-269568">Register Here</a>
             </div>
           </li>
@@ -171,7 +171,7 @@
               <h1 style="color:#fbbc04">Workshop - Cloud Computing For Your Projects</h1>
               <p>By Richa Agrawal</p>
               <p>06:00 PM - 07:00 PM</p>
-              <p>11th March 2021</p>
+              <p>11th March 2022</p>
               <a href="https://dare2compete.com/workshop/cloud-computing-for-your-projects-devcation-indira-gandhi-delhi-technical-university-for-women-igdtuw-delhi-269579">Register Here</a>
             </div>
           </li>
@@ -179,15 +179,15 @@
               <div>
                   <h1 style="color:#34a853">Hack 'n' Solve Begins</h1>
                   <p>00:00 AM onwards</p>
-                  <p>12th March 2021</p>
+                  <p>12th March 2022</p>
               </div>
           </li>
           <li>
             <div>
               <h1 style="color:#fbbc04">Workshop - Roadmap To DSA</h1>
-              <p>By Kirti Gera</p>
+              <p>By Yash Dwivedi</p>
               <p>07:00 PM - 08:00 PM</p>
-              <p>12th March 2021</p>
+              <p>12th March 2022</p>
               <a href="https://dare2compete.com/workshop/roadmap-to-dsa-devcation-indira-gandhi-delhi-technical-university-for-women-igdtuw-delhi-269795">Register Here</a>
             </div>
           </li>
@@ -195,21 +195,21 @@
             <div>
                 <h1 style="color:#34a853">Hack 'n' Solve - Final Submission</h1>
                 <p>12:00 PM</p>
-                <p>13th March 2021</p>
+                <p>13th March 2022</p>
             </div>
         </li>
         <li>
             <div>
                 <h1 style="color:#34a853">Hack 'n' Solve - Pitch Round (All Teams)</h1>
                 <p>12:30 PM - 02:30 PM</p>
-                <p>13th March 2021</p>
+                <p>13th March 2022</p>
             </div>
         </li>
         <li>
             <div>
                 <h1 style="color:#34a853">Hack 'n' Solve - Pitch Round (Top 10 Teams)</h1>
                 <p>04:00 PM - 06:30 PM</p>
-                <p>13th March 2021</p>
+                <p>13th March 2022</p>
             </div>
         </li>
         <li>
