--- a/view/schedule.html
+++ b/view/schedule.html
@@ -199,6 +199,14 @@
             </div>
         </li>
         <li>
+          <div>
+            <h1 style="color:#fbbc04">Workshop - Analystics & Automation</h1>
+            <p>By Sayali Patil & Raghul Prasanth</p>
+            <p>12:00 Noon Onwards</p>
+            <p>13th March 2022</p>
+          </div>
+        </li>
+        <li>
             <div>
                 <h1 style="color:#34a853">Hack 'n' Solve - Pitch Round (All Teams)</h1>
                 <p>12:30 PM - 02:30 PM</p>
