--- a/view/designsolve.html
+++ b/view/designsolve.html
@@ -32,7 +32,6 @@
                         <li class="nav__item"><a href="#rules" class="nav__link ">Rules</a></li>
                         <li class="nav__item"><a href="#theme" class="nav__link">Theme</a></li>
                         <li class="nav__item"><a href="#judges" class="nav__link">Judges</a></li>
-                        <li class="nav__item"><a href="#mentors" class="nav__link">Mentors</a></li>
                         <li class="nav__item"><a href="#prizes" class="nav__link">Prizes</a></li> 
                         <li><i class='bx bx-toggle-left change-theme' id="theme-button"></i></li>
                     </ul>
@@ -107,45 +106,21 @@
                 <h2 class="section-title">Judges</h2>
                 <div class="decoration__container bd-grid">
                     <div class="decoration__data">
-                        <img src="../img/events/user_placeholder.png" alt="" class="decoration__img">
-                        <h3 class="decoration__title">Judge</h3> 
-                        <p class="button button-link">Coming Soon</p>
+                        <img src="../img/Judges/Designathon/1.png" alt="" class="decoration__img">
+                        <h3 class="decoration__title">Manprit Kalsi</h3> 
+                        <!-- <p class="button button-link">Coming Soon</p> -->
                     </div>
 
                     <div class="decoration__data">
-                        <img src="../img/events/user_placeholder.png" alt="" class="decoration__img">
-                        <h3 class="decoration__title">Judge</h3>
-                        <p class="button button-link">Coming Soon</p>
+                        <img src="../img/Judges/Designathon/2.png" alt="" class="decoration__img">
+                        <h3 class="decoration__title">Puru Sharma</h3>
+                        <!-- <p class="button button-link">Coming Soon</p> -->
                     </div>
 
                     <div class="decoration__data">
-                        <img src="../img/events/user_placeholder.png" alt="" class="decoration__img">
-                        <h3 class="decoration__title">Judge</h3>
-                        <p class="button button-link">Coming Soon</p>
-                    </div>
-                </div>
-            </section>
-
-             <!--========== MENTORS ==========-->
-             <section class="decoration section bd-container" id="mentors">
-                <h2 class="section-title">Mentors</h2>
-                <div class="decoration__container bd-grid">
-                    <div class="decoration__data">
-                        <img src="../img/events/user_placeholder.png" alt="" class="decoration__img">
-                        <h3 class="decoration__title">Mentor</h3> 
-                        <p class="button button-link">Coming Soon</p>
-                    </div>
-
-                    <div class="decoration__data">
-                        <img src="../img/events/user_placeholder.png" alt="" class="decoration__img">
-                        <h3 class="decoration__title">Mentor</h3>
-                        <p class="button button-link">Coming Soon</p>
-                    </div>
-
-                    <div class="decoration__data">
-                        <img src="../img/events/user_placeholder.png" alt="" class="decoration__img">
-                        <h3 class="decoration__title">Mentor</h3>
-                        <p class="button button-link">Coming Soon</p>
+                        <img src="../img/Judges/Designathon/3.png" alt="" class="decoration__img">
+                        <h3 class="decoration__title">Khushi Thakur</h3>
+                        <!-- <p class="button button-link">Coming Soon</p> -->
                     </div>
                 </div>
             </section>
