--- a/view/designsolve.html
+++ b/view/designsolve.html
@@ -106,21 +106,21 @@
                 <h2 class="section-title">Judges</h2>
                 <div class="decoration__container bd-grid">
                     <div class="decoration__data">
-                        <img src="../img/Judges/Designathon/1.png" alt="" class="decoration__img">
+                        <a  href="https://www.linkedin.com/in/manpritkalsi/" target="_blank"><img src="../img/Judges/Designathon/1.png" alt="" class="decoration__img"></a>
                         <h3 class="decoration__title">Manprit Kalsi</h3> 
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <p>Experience Design Consultant<br/>Founder @Kalsify</p>
                     </div>
 
                     <div class="decoration__data">
-                        <img src="../img/Judges/Designathon/2.png" alt="" class="decoration__img">
+                        <a href="https://www.linkedin.com/in/puru-sharma-028a77182" target="_blank"><img src="../img/Judges/Designathon/2.png" alt="" class="decoration__img"></a>
                         <h3 class="decoration__title">Puru Sharma</h3>
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <p>UX Designer</p>
                     </div>
 
                     <div class="decoration__data">
-                        <img src="../img/Judges/Designathon/3.png" alt="" class="decoration__img">
+                        <a href="https://www.linkedin.com/in/khushi-0810/" target="_blank"><img src="../img/Judges/Designathon/3.png" alt="" class="decoration__img"></a>
                         <h3 class="decoration__title">Khushi Thakur</h3>
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <p>Graphic Designer</p>
                     </div>
                 </div>
             </section>
