--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -109,33 +109,33 @@
                 <h2 class="section-title">Judges</h2>
                 <div class="decoration__container bd-grid">
                     <div class="decoration__data">
-                        <img src="../img/Judges/Hackathon/9.png" alt="" class="decoration__img">
+                        <a href="https://www.linkedin.com/in/divij-bajaj/" target="_blank"><img src="../img/Judges/Hackathon/9.png" alt="" class="decoration__img"></a>
                         <h3 class="decoration__title">Divij Bajaj</h3> 
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <p>Data Scientist at Microsoft</p>
                     </div>
 
                     <div class="decoration__data">
-                        <img src="../img/Judges/Hackathon/13.png" alt="" class="decoration__img">
+                        <a href="https://www.linkedin.com/in/kathita/" target="_blank"><img src="../img/Judges/Hackathon/13.png" alt="" class="decoration__img"></a>
                         <h3 class="decoration__title">Kathita Goel</h3>
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <p>Senior Product Technology Manager, Google</p>
                     </div>
 
                     <div class="decoration__data">
-                        <img src="../img/Judges/Hackathon/10.png" alt="" class="decoration__img">
+                        <a href="https://www.linkedin.com/in/aanshul-sadaria-31069494/" target="_blank"><img src="../img/Judges/Hackathon/10.png" alt="" class="decoration__img"></a>
                         <h3 class="decoration__title">Aanshul Sadaria</h3>
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <p>Software Engineer II at Google</p>
                     </div>
 
                     <div class="decoration__data">
-                        <img src="../img/Judges/Hackathon/11.png" alt="" class="decoration__img">
+                        <a href="https://in.linkedin.com/in/mouleeswark" target="_blank"><img src="../img/Judges/Hackathon/11.png" alt="" class="decoration__img"></a>
                         <h3 class="decoration__title">Mouleeswar Kothandaraman</h3>
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <p>Software Architect at Cisco</p>
                     </div>
 
                     <div class="decoration__data">
-                        <img src="../img/Judges/Hackathon/12.png" alt="" class="decoration__img">
-                        <h3 class="decoration__title">Jaspreet Kaur</h3>
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <a href="https://www.linkedin.com/in/sonali-tyagi-92309798/" target="_blank"><img src="../img/Judges/Ideathon/8.png" alt="" class="decoration__img"></a>
+                        <h3 class="decoration__title">Sonali Tyagi</h3>
+                        <p>Network Security Consultant-III at Cisco</p>
                     </div>
                 </div>
             </section>
