--- a/view/ideatesolve.html
+++ b/view/ideatesolve.html
@@ -112,33 +112,34 @@
                 <h2 class="section-title">Judges</h2>
                 <div class="decoration__container bd-grid">
                     <div class="decoration__data">
-                        <img src="../img/Judges/Ideathon/4.png" alt="" class="decoration__img">
+                        <a href="https://www.linkedin.com/in/devish2/" target="_blank">
+                        <img src="../img/Judges/Ideathon/4.png" alt="" class="decoration__img"></a>
                         <h3 class="decoration__title">Devesh Raj</h3> 
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <p>Cloud Engineer & Map Analyst at Google</p>
                     </div>
 
                     <div class="decoration__data">
-                        <img src="../img/Judges/Ideathon/5.png" alt="" class="decoration__img">
+                        <a href="https://www.linkedin.com/in/vkarora/" target="_blank"><img src="../img/Judges/Ideathon/5.png" alt="" class="decoration__img"></a>
                         <h3 class="decoration__title">Dr. V.K Arora</h3>
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <p>Association - CEO, IGDTUW - Anveshan Foundation</p>
                     </div>
 
                     <div class="decoration__data">
-                        <img src="../img/Judges/Ideathon/6.png" alt="" class="decoration__img">
+                        <a href="https://www.linkedin.com/in/kshitijashekhar/" target="_blank"><img src="../img/Judges/Ideathon/6.png" alt="" class="decoration__img"></a>
                         <h3 class="decoration__title">Kshitija Shekhar</h3>
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <p>BTSA at ZS</p>
                     </div>
 
                     <div class="decoration__data">
-                        <img src="../img/Judges/Ideathon/7.png" alt="" class="decoration__img">
+                        <a href="https://www.linkedin.com/in/nitin-shettigar/" target="_blank"><img src="../img/Judges/Ideathon/7.png" alt="" class="decoration__img"></a>
                         <h3 class="decoration__title">Nitin Shettigar</h3>
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <p>Consulting Engineer at Cisco</p>
                     </div>
 
                     <div class="decoration__data">
-                        <img src="../img/Judges/Ideathon/8.png" alt="" class="decoration__img">
-                        <h3 class="decoration__title">Sonali Tyagi</h3>
-                        <!-- <p class="button button-link">Coming Soon</p> -->
+                        <a href="https://www.linkedin.com/in/jaspreetkaur96/" target="_blank"><img src="../img/Judges/Hackathon/12.png" alt="" class="decoration__img"></a>
+                        <h3 class="decoration__title">Jaspreet Kaur</h3>
+                        <p>Software Consulting Engineer at Cisco</p>
                     </div>
                 </div>
             </section>
