Added symbl.ai sponsor

--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -398,6 +398,16 @@
                                     </ul>
                                 </p>
                             </div>
+
+                            <div class="decoration__data">
+                                <img src="../img/events/sponsor_star.png" alt="" class="decoration__img" >
+                                <h3 class="decoration__title">symbl.ai Track Prize</h3>
+                                <p class="button button-link">
+                                    <ul class="prizes_list">
+<li>Symbl.ai swags for projects using symbl.ai </li>
+                                    </ul>
+                                </p>
+                            </div>
                         </div>
                 </section>
 
